--- a/WebProjectCS/WebProjectCS/Views/BlogItems/Details.cshtml
+++ b/WebProjectCS/WebProjectCS/Views/BlogItems/Details.cshtml
@@ -50,5 +50,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.BlogItemID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="ConvBlogItems" asp-action="Conversation" asp-route-id=@Html.DisplayFor(model => model.ConvID)>Back to List</a>
 </div>
