--- a/WebProjectCS/WebProjectCS/Views/BlogItems/Edit.cshtml
+++ b/WebProjectCS/WebProjectCS/Views/BlogItems/Edit.cshtml
@@ -14,19 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BlogItemID" />
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConvID" class="control-label"></label>
-                <input asp-for="ConvID" class="form-control" />
-                <span asp-validation-for="ConvID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UID" class="control-label"></label>
-                <input asp-for="UID" class="form-control" />
-                <span asp-validation-for="UID" class="text-danger"></span>
+                <input type="hidden" asp-for="ConvID" class="form-control" value=@ViewData["ConvID"] />
+                <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Subject" class="control-label"></label>
@@ -39,11 +28,6 @@
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RelatedID" class="control-label"></label>
-                <input asp-for="RelatedID" class="form-control" />
-                <span asp-validation-for="RelatedID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
@@ -51,6 +35,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="ConvBlogItems" asp-action="Conversation" asp-route-id=@ViewData["ConvID"]>Back to List</a>
 </div>
 
