--- a/WebProjectCS/WebProjectCS/Views/BlogItems/Comment.cshtml
+++ b/WebProjectCS/WebProjectCS/Views/BlogItems/Comment.cshtml
@@ -6,7 +6,7 @@
 }
 @{var UPriv = Html.ViewContext.HttpContext.Session.GetInt32("UserPriv");}
 @{var UName = Html.ViewContext.HttpContext.Session.GetString("UserName");}
-@{var UserID = Html.ViewContext.HttpContext.Session.GetInt32("UserPriv");}
+@{var UserID = Html.ViewContext.HttpContext.Session.GetInt32("UserID");}
 
 <h2>Create New Comment</h2>
 <hr />
