--- a/WebProjectCS/WebProjectCS/Views/Shared/Layout/_Layout.cshtml
+++ b/WebProjectCS/WebProjectCS/Views/Shared/Layout/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @{var UPriv = Html.ViewContext.HttpContext.Session.GetInt32("UserPriv");}
 @{var UName = Html.ViewContext.HttpContext.Session.GetString("UserName");}
-@{var UserID = Html.ViewContext.HttpContext.Session.GetInt32("UserPriv");}
+@{var UserID = Html.ViewContext.HttpContext.Session.GetInt32("UserID");}
 
 <!DOCTYPE html>
 <html>
